Fix width overflowing layout on small screens

--- a/src/sass/modules/_base.scss
+++ b/src/sass/modules/_base.scss
@@ -38,13 +38,32 @@ body{
     justify-content:center;
     align-content:center;
     min-height: 100vh;
-    grid-template-columns:repeat(5, 100px);
+    min-width: 0;
+    grid-template-columns:repeat(5, minmax(50px, 1fr));
     grid-template-rows: minmax(120px,auto) repeat(7, 75px);
     min-width: 0;
     min-height: 0;
 
-    @include max_width (540px) {
-        grid-template-columns:repeat(5, 1fr);
+    @include max_width (330px) {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: minmax(120px,auto) 75px repeat(8, 75px);
+
+        #btn_equ {
+            grid-column: span 1;
+        }
+    }
+
+    @include max_width (250px) {
+        grid-template-columns:repeat(3, 1fr);
+        grid-template-rows: minmax(120px,auto) repeat(11, 75px);
+
+        #btn_del {
+            grid-column: span 1;
+        }
+
+        #btn_equ {
+            grid-column: span 3;
+        }
     }
 }
 
@@ -65,4 +84,8 @@ body{
 
 .span-three {
     grid-column: span 3;
+
+    @include max_width (330px) {
+        grid-column: span 2;
+    }
 }
